--- a/template.html
+++ b/template.html
@@ -166,8 +166,71 @@ pybossa.taskLoaded(function(task, deferred) {
           }
         });
 
+        var overlayStyle = (function() {
+            var styles = {};
+            styles['Polygon'] = [
+              new ol.style.Style({
+                fill: new ol.style.Fill({
+                  color: [255, 255, 255, 0.5]
+                })
+              }),
+              new ol.style.Style({
+                stroke: new ol.style.Stroke({
+                  color: [255, 255, 255, 1],
+                  width: 5
+                })
+              }),
+              new ol.style.Style({
+                stroke: new ol.style.Stroke({
+                  color: [0, 153, 255, 1],
+                  width: 3
+                })
+              })
+            ];
+            styles['MultiPolygon'] = styles['Polygon'];
+
+            styles['LineString'] = [
+              new ol.style.Style({
+                stroke: new ol.style.Stroke({
+                  color: [255, 255, 255, 1],
+                  width: 5
+                })
+              }),
+              new ol.style.Style({
+                stroke: new ol.style.Stroke({
+                  color: [0, 153, 255, 1],
+                  width: 3
+                })
+              })
+            ];
+            styles['MultiLineString'] = styles['LineString'];
+
+            styles['Point'] = [
+              new ol.style.Style({
+                image: new ol.style.Circle({
+                  radius: 7,
+                  fill: new ol.style.Fill({
+                    color: [0, 153, 255, 1]
+                  }),
+                  stroke: new ol.style.Stroke({
+                    color: [255, 255, 255, 0.75],
+                    width: 1.5
+                  })
+                }),
+                zIndex: 100000
+              })
+            ];
+            styles['MultiPoint'] = styles['Point'];
+
+            styles['GeometryCollection'] = styles['Polygon'].concat(styles['Point']);
+
+            return function(feature, resolution) {
+              return styles[feature.getGeometry().getType()];
+            };
+        })();
+
         task.overlay = new ol.FeatureOverlay({
-            //styleFunction: overlayStyle
+            styleFunction: overlayStyle
         });
 
         task.modify = new ol.interaction.Modify({ 
@@ -235,10 +298,6 @@ pybossa.taskLoaded(function(task, deferred) {
 pybossa.presentTask(function(task, deferred) {
     if ( !$.isEmptyObject(task) ) {
         loadUserProgress();
-        //$('#photo-link').html('').append(task.info.image);
-        //$("#photo-link").attr("href", task.info.link);
-        //$("#question").html(task.info.question);
-
 
         $('#task-id').html(task.id);
         $("#map_" + task.id).show();
@@ -257,6 +316,7 @@ pybossa.presentTask(function(task, deferred) {
                 }
                 pybossa.saveTask(task.id, task.answer).done(function() {
                     deferred.resolve();
+                    $("#map_" + task.id).remove();
                 });
                 $("#loading").fadeIn(500);
                 if ($("#disqus_thread").is(":visible")) {
