--- a/template.html
+++ b/template.html
@@ -40,19 +40,16 @@
     It uses the class="skeleton" to identify the elements that belong to the
     task.
 -->
+<div class="row skeleton">
+    <div class="span12">
+        <h1>Draw the outline of the main object shown in the picture</h1>
+    </div>
+</div>
 <div class="row skeleton"> <!-- Start Skeleton Row-->
-    <div class="span6 "><!-- Start of Question and Submission DIV (column) -->
-        <h1 id="question">Question</h1> <!-- The question will be loaded here -->
-        <div id="answer"> <!-- Start DIV for the submission buttons -->
-            <!-- If the user clicks this button, the saved answer will be value="yes"-->
-            <button class="btn btn-success btn-answer" value='Yes'><i class="icon icon-white icon-thumbs-up"></i> Yes</button>
-            <!-- If the user clicks this button, the saved answer will be value="no"-->
-            <button class="btn btn-danger btn-answer" value='No'><i class="icon icon-white icon-thumbs-down"></i> No</button>
-            <!-- If the user clicks this button, the saved answer will be value="NoPhoto"-->
-            <button class="btn btn-answer" value='NoPhoto'><i class="icon icon-white icon-exclamation"></i> No photo</button>
-            <!-- If the user clicks this button, the saved answer will be value="NotKnown"-->
-            <button class="btn btn-answer" value='NotKnown'><i class="icon icon-white icon-question-sign"></i> I don't know</button>
-        </div><!-- End of DIV for the submission buttons -->
+    <div class="span8"><!-- Start of Photo DIV (column) -->
+        <div id="map" class="img-polaroid"></div>
+    </div><!-- End of Photo DIV (columnt) -->
+    <div class="span4"><!-- Start of Question and Submission DIV (column) -->
         <!-- Feedback items for the user -->
         <p>You are working now on task: <span id="task-id" class="label label-warning">#</span></p>
         <p>You have completed: <span id="done" class="label label-info"></span> tasks from
@@ -61,6 +58,10 @@
         <div class="progress progress-striped">
             <div id="progress" rel="tooltip" title="#" class="bar" style="width: 0%;"></div>
         </div>
+
+        <div id="answer"> <!-- Start DIV for the submission buttons -->
+            <button id="btn-save" class="btn btn-success btn-answer" value='save'><i class="icon icon-white icon-save"></i> Save the outline</button>
+        </div><!-- End of DIV for the submission buttons -->
         <!-- 
             This application uses Disqus to allow users to provide some feedback.
             The next section includes a button that when a user clicks on it will
@@ -70,15 +71,12 @@
             <button class="btn btn-primary btn-large btn-disqus" onclick="loadDisqus()"><i class="icon-comments"></i> Show comments</button>
             <button class="btn btn-large btn-disqus" onclick="loadDisqus()" style="display:none"><i class="icon-comments"></i> Hide comments</button>
         </div><!-- End of Disqus Button section -->
+
         <!-- Disqus thread for the given task -->
         <div id="disqus_thread" style="margin-top:5px;display:none"></div>
+
     </div><!-- End of Question and Submission DIV (column) -->
-    <div class="span6"><!-- Start of Photo DIV (column) -->
-        <a id="photo-link" href="#">
-            <!--<img id="photo" src="http://i.imgur.com/GeHxzb7.png" style="max-width=100%">-->
-        </a>
-        <div id="map"></div>
-    </div><!-- End of Photo DIV (columnt) -->
+
 </div><!-- End of Skeleton Row -->
 
 <script type="text/javascript">
@@ -281,6 +279,8 @@ pybossa.taskLoaded(function(task, deferred) {
                 task.map.removeInteraction(task.draw);
                 task.map.addInteraction(task.select);
                 task.map.addInteraction(task.modify);
+                task.polygon = true;
+                $("#btn-save").removeClass("disabled");
                 });
 
         task.map.addInteraction(task.draw);
@@ -289,6 +289,7 @@ pybossa.taskLoaded(function(task, deferred) {
                  'task_id': task.id,
                  'polygon': [],
                  'img': task.info.url_b};
+        task.polygon = false;
         }
     else {
         deferred.resolve(task);
@@ -298,31 +299,33 @@ pybossa.taskLoaded(function(task, deferred) {
 pybossa.presentTask(function(task, deferred) {
     if ( !$.isEmptyObject(task) ) {
         loadUserProgress();
-
+        $("#btn-save").addClass("disabled");
         $('#task-id').html(task.id);
         $("#map_" + task.id).show();
         $('.btn-answer').off('click').on('click', function(evt) {
             var answer = $(evt.target).attr("value");
-            if (typeof answer != 'undefined') {
+            if (typeof answer != 'undefined'){
                 //console.log(answer);
                 //console.log(task.map.source.features);
-                var features = task.source.getAllFeatures();
-                for(i=0;i<features.length;i++) {
-                    var g = features[i].getGeometry();
-                    task.answer = {
-                        'task_id': task.id,
-                        'polygon': g.getCoordinates(),
-                        'img': task.info.url_b};
-                }
-                pybossa.saveTask(task.id, task.answer).done(function() {
-                    deferred.resolve();
-                    $("#map_" + task.id).remove();
-                });
-                $("#loading").fadeIn(500);
-                if ($("#disqus_thread").is(":visible")) {
-                    $('#disqus_thread').toggle();
-                    $('.btn-disqus').toggle();
-                }
+                if (task.polygon) {
+                    var features = task.source.getAllFeatures();
+                    for(i=0;i<features.length;i++) {
+                        var g = features[i].getGeometry();
+                        task.answer = {
+                            'task_id': task.id,
+                            'polygon': g.getCoordinates(),
+                            'img': task.info.url_b};
+                    }
+                    pybossa.saveTask(task.id, task.answer).done(function() {
+                        deferred.resolve();
+                        $("#map_" + task.id).remove();
+                    });
+                    $("#loading").fadeIn(500);
+                    if ($("#disqus_thread").is(":visible")) {
+                        $('#disqus_thread').toggle();
+                        $('.btn-disqus').toggle();
+                    }
+                } // end if task.polygon
             }
             else {
                 $("#error").show();
