--- a/template.html
+++ b/template.html
@@ -1,4 +1,75 @@
 <link rel="stylesheet" href="http://ol3js.org/en/master/css/ol.css" type="text/css">
+<style>
+.ol-zoom a,
+.ol-zoom-extent a,
+.ol-full-screen a{
+  display: block;
+  margin: 1px;
+  padding: 0;
+  color: white;
+  font-size: 1.14em;
+  font-weight: bold;
+  text-decoration: none;
+  text-align: center;
+  height: 1.375em;
+  width: 1.375em;
+  line-height: 1.4em;
+  background-color: #7b98bc;
+  background-color: rgba(0,60,136,0.5);
+  border: none;
+}
+.ol-zoom a::-moz-focus-inner,
+.ol-zoom-extent a::-moz-focus-inner,
+.ol-full-screen a::-moz-focus-inner {
+  border: none;
+  padding: 0;
+}
+.ol-zoom-extent a {
+  line-height: 1.4em;
+}
+.ol-touch .ol-zoom a,
+.ol-touch .ol-full-screen a,
+.ol-touch .ol-zoom-extent a{
+  font-size: 1.5em;
+}
+.ol-touch .ol-zoom-extent {
+  top: 5.5em;
+}
+.ol-zoom a:hover,
+.ol-zoom a:focus,
+.ol-zoom-extent a:hover,
+.ol-zoom-extent a:focus,
+.ol-full-screen a:hover,
+.ol-full-screen a:focus {
+  text-decoration: none;
+  background-color: #4c6079;
+  background-color: rgba(0,60,136,0.7);
+}
+.ol-zoom-extent a:after {
+    content: "E";
+}
+.ol-zoom-in {
+  border-radius: 2px 2px 0 0;
+}
+.ol-zoom-out {
+  border-radius: 0 0 2px 2px;
+}
+a.ol-full-screen-false:after {
+  content: "\2194";
+}
+a.ol-full-screen-true:after {
+  content: "\00d7";
+}
+
+.ol-zoom-extent a,
+.ol-attribution,
+.ol-full-screen a,
+.ol-scale-line-inner,
+.ol-zoom a,
+.ol-has-tooltip [role=tooltip] {
+  font-family: 'Lucida Grande',Verdana,Geneva,Lucida,Arial,Helvetica,sans-serif;
+}
+</style>
 <script src="http://ol3js.org/en/master/build/ol.js" type="text/javascript"></script>
 <script>
 // OpenLayers 3. see http://ol3js.org/
@@ -539,6 +610,63 @@ vj.prototype.getTileSize=vj.prototype.ka;G("ol.tilegrid.WMTS",Yr);Yr.prototype.g
     }
 
 </style>
+
+<!--
+    Task DOM for loading the Flickr Images
+    It uses the class="skeleton" to identify the elements that belong to the
+    task.
+-->
+<div class="row skeleton">
+    <div class="span12">
+        <h1 id="step1">Draw the outline and/or holes of the main object shown in the picture</h1>
+        <div class="btn-group">
+            <button id="outline" type="button" class="btn btn-default btn-type active" name="outline" value="outline">Outline</button>
+            <button id="holes" type="button" class="btn btn-default btn-type" name="holes" value="holes">Holes</button>
+        </div>
+        <div class="btn-group">
+            <button id="draw" type="button" class="btn btn-default btn-draw active" name="draw" value="draw">Draw</button>
+            <button id="edit" type="button" class="btn btn-default btn-draw" name="edit" value="edit">Edit</button>
+            <button id="delete" type="button" class="btn btn-default btn-draw" name="delete" value="delete">Remove all polygons</button>
+        </div>
+        <div class="btn-group">
+
+            <button id="btn-save" class="btn btn-success btn-answer" value='save'><i class="icon icon-white icon-save"></i> Save the drawings</button>
+        </div>
+    </div>
+</div>
+<div class="row skeleton"> <!-- Start Skeleton Row-->
+    <div class="span8"><!-- Start of Photo DIV (column) -->
+        <div id="map" class="img-polaroid"></div>
+    </div><!-- End of Photo DIV (columnt) -->
+    <div class="span4"><!-- Start of Question and Submission DIV (column) -->
+        <!-- Feedback items for the user -->
+        <p>You are working now on task: <span id="task-id" class="label label-warning">#</span></p>
+        <p>You have completed: <span id="done" class="label label-info"></span> tasks from
+        <!-- Progress bar for the user -->
+        <span id="total" class="label label-inverse"></span></p>
+        <div class="progress progress-striped">
+            <div id="progress" rel="tooltip" title="#" class="bar" style="width: 0%;"></div>
+        </div>
+
+        <div id="answer"> <!-- Start DIV for the submission buttons -->
+        </div><!-- End of DIV for the submission buttons -->
+        <!-- 
+            This application uses Disqus to allow users to provide some feedback.
+            The next section includes a button that when a user clicks on it will
+            load the comments, if any, for the given task
+        -->
+        <div id="disqus_show_btn" style="margin-top:5px;">
+            <button class="btn btn-primary btn-large btn-disqus" onclick="loadDisqus()"><i class="icon-comments"></i> Show comments</button>
+            <button class="btn btn-large btn-disqus" onclick="loadDisqus()" style="display:none"><i class="icon-comments"></i> Hide comments</button>
+        </div><!-- End of Disqus Button section -->
+
+        <!-- Disqus thread for the given task -->
+        <div id="disqus_thread" style="margin-top:5px;display:none"></div>
+
+    </div><!-- End of Question and Submission DIV (column) -->
+
+</div><!-- End of Skeleton Row -->
+
 <div class="row">
     <!-- Success and Error Messages for the user --> 
     <div class="span6 offset2" style="height:50px">
@@ -568,59 +696,6 @@ vj.prototype.getTileSize=vj.prototype.ka;G("ol.tilegrid.WMTS",Yr);Yr.prototype.g
     </div> <!-- End Success and Error Messages for the user -->
 </div> <!-- End of Row -->
 
-<!--
-    Task DOM for loading the Flickr Images
-    It uses the class="skeleton" to identify the elements that belong to the
-    task.
--->
-<div class="row skeleton">
-    <div class="span12">
-        <h1 id="step1">Draw the outline of the main object shown in the picture</h1>
-        <h1 id="step2" style="display:none">Draw the holes of the main object shown in the picture</h1>
-        <div class="btn-group">
-            <button id="outline" type="button" class="btn btn-default btn-type active" name="outline" value="outline">Outline</button>
-            <button id="holes" type="button" class="btn btn-default btn-type" name="holes" value="holes">Holes</button>
-        </div>
-        <div class="btn-group">
-            <button id="draw" type="button" class="btn btn-default btn-draw active" name="draw" value="draw">Draw</button>
-            <button id="edit" type="button" class="btn btn-default btn-draw" name="edit" value="edit">Edit</button>
-            <button id="delete" type="button" class="btn btn-default btn-draw" name="delete" value="delete">Remove all polygons</button>
-        </div>
-    </div>
-</div>
-<div class="row skeleton"> <!-- Start Skeleton Row-->
-    <div class="span8"><!-- Start of Photo DIV (column) -->
-        <div id="map" class="img-polaroid"></div>
-    </div><!-- End of Photo DIV (columnt) -->
-    <div class="span4"><!-- Start of Question and Submission DIV (column) -->
-        <!-- Feedback items for the user -->
-        <p>You are working now on task: <span id="task-id" class="label label-warning">#</span></p>
-        <p>You have completed: <span id="done" class="label label-info"></span> tasks from
-        <!-- Progress bar for the user -->
-        <span id="total" class="label label-inverse"></span></p>
-        <div class="progress progress-striped">
-            <div id="progress" rel="tooltip" title="#" class="bar" style="width: 0%;"></div>
-        </div>
-
-        <div id="answer"> <!-- Start DIV for the submission buttons -->
-            <button id="btn-save" class="btn btn-success btn-answer" value='save'><i class="icon icon-white icon-save"></i> Save the outline</button>
-        </div><!-- End of DIV for the submission buttons -->
-        <!-- 
-            This application uses Disqus to allow users to provide some feedback.
-            The next section includes a button that when a user clicks on it will
-            load the comments, if any, for the given task
-        -->
-        <div id="disqus_show_btn" style="margin-top:5px;">
-            <button class="btn btn-primary btn-large btn-disqus" onclick="loadDisqus()"><i class="icon-comments"></i> Show comments</button>
-            <button class="btn btn-large btn-disqus" onclick="loadDisqus()" style="display:none"><i class="icon-comments"></i> Hide comments</button>
-        </div><!-- End of Disqus Button section -->
-
-        <!-- Disqus thread for the given task -->
-        <div id="disqus_thread" style="margin-top:5px;display:none"></div>
-
-    </div><!-- End of Question and Submission DIV (column) -->
-
-</div><!-- End of Skeleton Row -->
 
 <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
@@ -804,7 +879,7 @@ pybossa.taskLoaded(function(task, deferred) {
           view: new ol.View2D({
             projection: task.pixelProjection,
             center: ol.extent.getCenter(task.pixelProjection.getExtent()),
-            zoom: 2
+            zoom: 3
           })
         });
         div_map.css("display", "none");
@@ -828,13 +903,21 @@ pybossa.taskLoaded(function(task, deferred) {
                 $("#btn-save").removeClass("disabled");
                 });
 
+        // When the first hole is completed, remove the drawInteraction
+        task.draw_holes.on('drawend', function(evt) {
+                task.holes = true;
+                $("#btn-save").removeClass("disabled");
+                });
+
         task.map.addInteraction(task.draw);
 
         task.answer = {
                  'task_id': task.id,
-                 'polygon': [],
+                 'outline': [],
+                 'holes': [],
                  'img': task.info.url_b};
         task.polygon = false;
+        task.holes = false;
         }
     else {
         deferred.resolve(task);
@@ -921,7 +1004,7 @@ pybossa.presentTask(function(task, deferred) {
                         for(i=0;i<features.length;i++) {
                             task.source_holes.removeFeature(features[i]);
                         }
-                        task.polygon = false;
+                        task.holes = false;
                         $("#draw").addClass("active");
                         $("#delete").removeClass("active");
                     }
@@ -945,10 +1028,22 @@ pybossa.presentTask(function(task, deferred) {
                         var g = features[i].getGeometry();
                         polygons.push(g.getCoordinates());
                     }
-                    task.answer = {
-                        'task_id': task.id,
-                        'polygon': polygons,
-                        'img': task.info.url_b};
+                    //task.answer = {
+                    //    'task_id': task.id,
+                    //    'polygon': polygons,
+                    //    'img': task.info.url_b};
+                    task.answer.outline = polygons;
+
+                    if (task.holes) {
+                        var features = task.source_holes.getAllFeatures();
+                        var polygons = [];
+                        for(i=0;i<features.length;i++) {
+                            var g = features[i].getGeometry();
+                            polygons.push(g.getCoordinates());
+                        }
+
+                        task.answer.holes = polygons;
+                    }
 
                     pybossa.saveTask(task.id, task.answer).done(function() {
                         deferred.resolve();
