Fixes for the repository

--- a/long_description.html
+++ b/long_description.html
@@ -25,9 +25,9 @@
     ignore irrelevant information.
         </p>
         <div class="row">
-        <iframe src="http://ghbtns.com/github-btn.html?user=findsorguk&repo=bronzeAgeIndex&type=watch&count=true&size=large" allowtransparency="true" frameborder="0" scrolling="0" width="170" height="30"></iframe>
+        <iframe src="http://ghbtns.com/github-btn.html?user=findsorguk&repo=photomasking&type=watch&count=true&size=large" allowtransparency="true" frameborder="0" scrolling="0" width="170" height="30"></iframe>
 
-        <iframe src="http://ghbtns.com/github-btn.html?user=findsorguk&repo=bronzeAgeIndex&type=fork&count=true&size=large" allowtransparency="true" frameborder="0" scrolling="0" width="170" height="30"></iframe>
+        <iframe src="http://ghbtns.com/github-btn.html?user=findsorguk&repo=photomasking&type=fork&count=true&size=large" allowtransparency="true" frameborder="0" scrolling="0" width="170" height="30"></iframe>
         </div>
             
         </div>
