New image to replace card index picture

--- a/tutorial.html
+++ b/tutorial.html
@@ -19,11 +19,10 @@
   of the artefact edge as the missing few pixels are very likely to
   appear in one of the other photogrpahs (at least 40 overlapping photographs are
   likely to exist for each object to support the construction of the
-  3d model). An example of a successful outline made up two
-  overlapping polygons is shown below (it could also have been done as just one polygon).
+  3d model). An example of a successful outline is shown below:
                 </p>
-                <img src="http://farm8.staticflickr.com/7358/12171450486_3c097e993b_z.jpg" class="img-polaroid"
-                     alt="An example of an artefact photograph whose outline has been defined by two overlapping polygons." width="100%" height="449"/>
+                <img src="https://farm4.staticflickr.com/3796/13464348955_a06ecab512.jpg" width="500" height="308" class="img-polaroid"
+                     alt="An example of an artefact photograph whose outline has been defined " />
             </div>
 
             <div id="1" class="modal-body" style="display:none">
