Change the copyright logo

--- a/template.html
+++ b/template.html
@@ -899,7 +899,7 @@ pybossa.taskLoaded(function(task, deferred) {
               source: new ol.source.ImageStatic({
                 attributions: [
                   new ol.Attribution({
-                    html: '&copy; <a href="http://xkcd.com/license.html">xkcd</a>'
+                    html: '&copy; <a href="http://micropasts.org">Micropasts</a>'
                   })
                 ],
                 url: task.info.url_b,
