Added help buttons

--- a/template.html
+++ b/template.html
@@ -617,8 +617,14 @@ vj.prototype.getTileSize=vj.prototype.ka;G("ol.tilegrid.WMTS",Yr);Yr.prototype.g
     It uses the class="skeleton" to identify the elements that belong to the
     task.
 -->
-<div class="row skeleton">
+<div class="row skeleton"> 
     <div class="span12">
+    
+        <div class="btn-grp">
+          <a class="btn btn-info btn-sm pull-right" href="../tutorial"><i class="glyphicon glyphicon-eye-open"></i> Tutorial</a> 
+          <a class="btn btn-info btn-sm pull-right" href="http://community.micropasts.org/category/crowdsourcing-support"><i class="glyphicon glyphicon-book"></i> Community Help</a>
+        </div>
+        
         <h1 id="step1">Draw the outline and/or holes of the main object shown in the picture</h1>
         <div class="btn-group">
             <button id="status" type="button" class="btn btn-default btn-type disabled" name="loading" value="loading">Loading photo</button>
