Improve tutorial text.

--- a/tutorial.html
+++ b/tutorial.html
@@ -11,13 +11,15 @@
                     Once the image has been loaded, you will be asked
   to click or tap around the edge of the artefact in order to define a
   polygon outline. Click once every time you wish to add a point along
-  the edge of the polygon and yor final point will snap back onto the
-  one you started with. In general, we would prefer you to draw ou polygon
-  very slightly INSIDE the actual edge of the artefact. This is
+  the edge of the polygon and your final point will snap back onto the
+  one you started with. You can draw one polygon around the entire
+  object or instead draw a series of overlapping
+  polygons if you prefer. In general, we would like you to draw your polygon(s)
+  very slightly inside the actual edge of the artefact. This is
   because we don't want background pixels near this edge to create a
-  fuzzy border, and we don't need to worry so much about losign a bit
-  of the artefact edge as the missing few pixels are very likely to
-  appear in one of the other photogrpahs (at least 40 overlapping photographs are
+  fuzzy border, and we don't need to worry so much about losing a bit
+  of the artefact edge, as the missing few pixels are very likely to
+  appear in one of the other photographs (at least 40 overlapping photographs are
   likely to exist for each object to support the construction of the
   3d model). An example of a successful outline is shown below:
                 </p>
@@ -28,9 +30,10 @@
             <div id="1" class="modal-body" style="display:none">
                 <p>
                 In a few cases, there might be one or more holes
-                in the object shown in the photograph, and you will
-                be given an opportunity to draw these holes in a
-                second step, after you have created the initial outline
+                in the object shown in the photograph (e.g. inside the loop
+                of a handle), and you can
+                click on the "Holes" button to be given an opportunity
+                to draw these in, as a second step, after you have created the initial outline
                 around the object. During the task, you can always return to this tutorial via the "Help" button. 
                 </p>
             	<p>
