Warning about mobile devices.

--- a/tutorial.html
+++ b/tutorial.html
@@ -6,10 +6,10 @@
             </div>
             <div id="0" class="modal-body" style="display:none">
                 <p>
-                    This application is very simple. When you participate,
-                    the platform will load a photograph of an archaeological artefact.
-                    Once the image has been loaded, you will be asked
-  to click or tap around the edge of the artefact in order to define a
+                    This application is very simple (but not that it does
+  not yet work on mobile devices). When you participate, the platform
+  will load a photograph of an archaeological artefact.Once the image
+  has been loaded, you will be asked to click around the edge of the artefact in order to define a
   polygon outline. Click once every time you wish to add a point along
   the edge of the polygon and your final point will snap back onto the
   one you started with. You can draw one polygon around the entire
