Button group sorted out

--- a/template.html
+++ b/template.html
@@ -89,9 +89,9 @@ a.ol-full-screen-true:after {
 <div class="row skeleton"> 
     <div class="span12">
     
-        <div class="btn-grp">
-          <a class="btn btn-info btn-sm pull-right" href="../tutorial"><i class="glyphicon glyphicon-eye-open"></i> Tutorial</a> 
-          <a class="btn btn-info btn-sm pull-right" href="http://community.micropasts.org/category/crowdsourcing-support"><i class="glyphicon glyphicon-book"></i> Community Help</a>
+        <div class="btn-group pull-right">
+        		<button class="btn btn-info btn-sm" data-toggle="modal" data-target="#myModal"><i class="glyphicon glyphicon-eye-open"></i> Tutorial</button>
+        		<a class="btn btn-info btn-sm" id="imgLink" target="_blank" data-toggle="tooltip" data-placement="top" title="Opens in a new window" href="http://community.micropasts.org/category/crowdsourcing-support"><i class="glyphicon glyphicon-book"></i> Community Help</a>
         </div>
         
         <h1 id="step1">Draw the outline and/or holes of the main object shown in the picture</h1>
